--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-Hunter Akins
+<head>
+	<title>Hunter Akins</title>
+</head>
 
-
+<body>
 BLUR intern at Lawrence Berkeley Lab
 Earth and Environmental Sciences Area
 Geophysics Department
-
+</body>
 
