--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
 	<title>Hunter Akins</title>
 </head>
@@ -8,3 +9,4 @@ Earth and Environmental Sciences Area
 Geophysics Department
 </body>
 
+</html>
