--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 </head>
 
 <body>
-BLUR intern at Lawrence Berkeley Lab
-Earth and Environmental Sciences Area
-Geophysics Department
+<h1>Hunter Akins</h1?
+<p>BLUR intern at Lawrence Berkeley Lab
+Eath and Environmental Sciences Area
+Geophysics Department</p>
 </body>
 
 </html>
