--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-US">
+
 <head>
 	<title>Hunter Akins</title>
 </head>
 
 <body>
-<h1>Hunter Akins</h1?
+<h1>Hunter Akins</h1>
 <p>BLUR intern at Lawrence Berkeley Lab
 Eath and Environmental Sciences Area
 Geophysics Department</p>
+<br>
+<img src="hunterakins.jpg">
 </body>
 
 </html>
