--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 Eath and Environmental Sciences Area
 Geophysics Department</p>
 <br>
-<img src="hunterakins.jpg">
+<img src="hunterakins.jpg" height="42" width="42">
 </body>
 
 </html>
