--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 
 <body>
 <h1>Hunter Akins</h1>
-<p>BLUR intern at Lawrence Berkeley Lab
-Eath and Environmental Sciences Area
+<p>
+BLUR intern at Lawrence Berkeley Lab
+<br>
+Earth and Environmental Sciences Area
+<br>
 Geophysics Department</p>
 <br>
-<img src="hunterakins.jpg" height="80" width="80">
+<img src="hunterakins.jpg" height="120" width="120">
 </body>
 
 </html>
