--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 
 <head>
 	<title>Hunter Akins</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 <h1>Hunter Akins</h1>
 <p>
-BLUR intern at Lawrence Berkeley Lab
+x BLUR intern at Lawrence Berkeley Lab
 <br>
-Earth and Environmental Sciences Area
+x Earth and Environmental Sciences Area
 <br>
-Geophysics Department</p>
+x Geophysics Department</p>
 <br>
-<img src="hunterakins.jpg" height="120" width="120">
+<a href="bio.html">About me</a>
+<br>
+
+<img src="hunterakins_cropped.jpg" height="155" width="100">
 </body>
 
 </html>
