reverted to og image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ x Geophysics Department</p>
 <a href="bio.html">About me</a>
 <br>
 
-<img src="hunterakins_shrunk.jpg" height="200" width="130">
+<img src="hunterakins_cropped.jpg" height="200" width="130">
 </body>
 
 </html>
