--- a/anti_aliasing.html
+++ b/anti_aliasing.html
@@ -28,7 +28,7 @@ Interestingly, you would expect it to be DC, but with its value fixed by the pha
 <br>
 However, I plotted it for a few different acquisitions and it was roughly the same (about 0) every time. Seems to suggest some filtering may be happening. 
 <br>
-<img src="15kHzrp.png" height='555' width='500'>
+<img src="15kHzrp.png" height="555" width="500">
 <br>
 </p>
 <h2>
