--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
 <h1>Hunter Akins</h1>
 <p>
-x BLUR intern at Lawrence Berkeley Lab
+x PhD student at Scripps Institution of Oceanography
 <br>
-x Earth and Environmental Sciences Area
+x Applied Ocean Sciences Curricular Group
 <br>
-x Geophysics Department</p>
+x Underwater acoustics, signal processing
 <br>
+x Formerly worked at Lawrence Berkeley Laboratory on instrumentation development
+</p>
 <a href="bio.html">About me</a>
 <br>
 
