updated bio and picture

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ x Formerly worked at Lawrence Berkeley Laboratory on instrumentation development
 <a href="bio.html">About me</a>
 <br>
 
-<img src="hunterakins_cropped.jpg" height="200" width="130">
+<img src="hunterakins.jpg" height="200" width="130">
 </body>
 
 </html>
