updated my bio. added links to my Github page

--- a/index.html
+++ b/index.html
@@ -9,18 +9,14 @@
 <body>
 <h1>Hunter Akins</h1>
 <p>
-x PhD student at Scripps Institution of Oceanography
-<br>
-x Applied Ocean Sciences Curricular Group
+x Postdoctoral scholar at Scripps Institution of Oceanography
 <br>
 x Underwater acoustics, signal processing
-<br>
-x Formerly worked at Lawrence Berkeley Laboratory on instrumentation development
 </p>
 <a href="bio.html">About me</a>
 <br>
 
-<img src="hunterakins.jpg" height="200" width="200">
+<img src="hunterakins0523.jpg" height="400">
 </body>
 
 </html>
